feat: add navigation tab for technologies

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
   <section class="grid-section technologies" id="technologies">
     <h1 class="titulo">Fantastic Roadmaps</h1>
-    <ul class="technologies-lista">
+    <ul class="technologies-lista js-tabmenu">
       <li>
         <img src="/assets/img/image1.svg" alt="">
       </li>
@@ -45,53 +45,47 @@
         <img src="/assets/img/image6.svg" alt="">
       </li>
     </ul>
-    <div class="technologies-descricao">
+    <div class="technologies-descricao js-tabcontent">
       <section>
         <h2>HTML</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É a linguagem de marcação usada para estruturar o conteúdo de páginas web, definindo elementos como textos, imagens e links.</p>
+        <p>Alguns de seus principais conceitos:</p>
+        <p>Tags, Elementos, Atributos e Semântica.</p>
       </section>
 
       <section>
         <h2>CSS</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É a linguagem de estilos responsável por definir a aparência e o layout das páginas, permitindo personalização e responsividade (adaptação do website para diferentes tamanhos de tela).</p>
+        <p>Alguns de seus principais conceitos:</p>
+        <p>Selectors, Box Model, Flexbox, Grid, Media Queries</p>
       </section>
 
       <section>
         <h2>JavaScript</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É uma linguagem de programação que adiciona interatividade ao site, permitindo manipulação do DOM e execução de lógica no navegador.</p>
+        <p>Alguns de seus principais conceitos:</p>
+        <p>Variáveis, Funções, Eventos, DOM, Arrays, Objetos.</p>
       </section>
 
       <section>
         <h2>React</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É uma biblioteca JavaScript para criar interfaces dinâmicas e reutilizáveis, baseada no conceito de componentes e estado.</p>
+        <p>Alguns de seus principais conceitos:</p>
+        <p> Componentes, Props, State, Hooks.</p>
       </section>
 
       <section>
         <h2>TypeScript</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É uma extensão do JavaScript que adiciona tipagem estática, tornando o código mais seguro e fácil de manter.</p>
+        <p>Alguns de seus principais conceitos: </p>
+        <p>Types, Interfaces, Generics, Enums.</p>
       </section>
 
       <section>
         <h2>Next.js</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum rerum consequuntur ducimus fugiat, cum ipsam?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti et quod harum, repellendus praesentium mollitia.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus corrupti atque at fuga et. Cum?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ad qui voluptatibus doloremque quasi ipsa.</p>
+        <p>É um framework para React que otimiza o desenvolvimento de aplicações web, oferecendo renderização híbrida e melhorias de performance.</p>
+        <p>Alguns de seus principais conceitos:</p>
+        <p> Páginas, SSR, API Routes, Static Generation.</p>
       </section>
     </div>
   </section>
@@ -99,13 +93,38 @@
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista">
       <dt>Por que seguir a ordem recomendada?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ea.</dd>
+      <dd>A ordem recomendada (1 - HTML, 2 - CSS, 3 - JavaScript, 4 - React, 5 - TypeScript, 6 - Next.js) faz sentido porque cada tecnologia depende da anterior:
+        <p>HTML é a base estrutural da web.</p>
+        <p> CSS é responsável pela estilização e aparência.</p>
+        <p>JavaScript adiciona interatividade e lógica.</p>
+        <p>React depende de JavaScript para criar componentes reutilizáveis.</p>
+        <p> TypeScript melhora o JavaScript com tipagem estática, útil para projetos grandes.</p>
+        <p>Next.js é um framework baseado em React que otimiza a performance e a organização do código.</p>
+        <p>Seguir essa ordem ajuda a entender cada etapa e evita frustrações ao lidar com conceitos avançados antes da base.</p>
+      </dd>
       <dt>Posso iniciar por React, TypeScript ou Next.js?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ea.</dd>
+      <dd>Tecnicamente, sim, mas não é recomendado.
+        <p>React e Next.js exigem conhecimento prévio de HTML, CSS e JavaScript, pois são baseados nessas tecnologias.</p>
+        <p>TypeScript adiciona complexidade extra ao JavaScript, podendo dificultar o aprendizado se você ainda não dominar a linguagem base.</p>
+        Se você já tem experiência com programação, pode tentar aprender React diretamente, mas entender bem HTML, CSS e JavaScript primeiro tornará o aprendizado mais fluido.
+      </dd>
       <dt>Qual a diferença entre biblioteca e framework?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ea.</dd>
+      <dd>
+        <p>Uma biblioteca (exemplo: React) é um conjunto de funções que você pode usar livremente no seu código sem seguir uma estrutura rígida. Você decide como organizá-la no projeto.</p>
+        <p>Um framework (exemplo: Next.js) já impõe uma estrutura e regras para o desenvolvimento, oferecendo mais funcionalidades prontas e padronizadas.</p>
+        Em resumo, bibliotecas dão liberdade, enquanto frameworks fornecem uma estrutura mais definida.
+      </dd>
       <dt>Quais exemplos de projetos são recomendados para iniciantes?</dt>
-      <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, ea.</dd>
+      <dd>Aqui estão algumas ideias, organizadas por nível de dificuldade:
+
+        <p>HTML + CSS: Página de portfólio, blog simples, landing page responsiva.</p>
+        <p>JavaScript: To-do list, calculadora, relógio digital, galeria de imagens interativa.</p>
+        <p>React: Lista de tarefas dinâmica, app de previsão do tempo com API, quiz interativo.</p>
+        <p>TypeScript: Aplicação CRUD (criar, ler, atualizar, deletar dados), agenda de contatos.</p>
+        <p>Next.js: Blog com CMS, e-commerce básico, dashboard de estatísticas.</p>
+
+        Cada um desses projetos ajuda a reforçar conceitos fundamentais antes de avançar para algo mais complexo.
+      </dd>
     </dl>
   </section>
 
