feat: add scroll animations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <nav class="menu">
+  <nav class="menu js-menu">
     <ul>
       <li><a href="#technologies">Technologies</a></li>
       <li><a href="#faq">Faq</a></li>
@@ -24,7 +24,7 @@
       <li><a href="https://dvdmarveira.netlify.app" target="_blank" rel="noopener noreferrer">About</a></li>
     </ul>
   </nav>
-  <section class="grid-section technologies" id="technologies">
+  <section class="grid-section technologies js-scroll" id="technologies">
     <h1 class="titulo">Fantastic Roadmaps</h1>
     <ul class="technologies-lista js-tabmenu">
       <li>
@@ -90,7 +90,7 @@
       </section>
     </div>
   </section>
-  <section class="grid-section faq" id="faq">
+  <section class="grid-section faq js-scroll" id="faq">
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista js-accordion">
       <dt>Por que seguir a ordem recomendada?</dt>
@@ -129,7 +129,7 @@
     </dl>
   </section>
 
-  <section class="grid-section contact" id="contact">
+  <section class="grid-section contact js-scroll" id="contact">
     <h1 class="titulo">contact</h1>
     <!-- <div class="mapa">
       <img src="/assets/img/mapa.jpg" alt="">
