feat: add pwa config v2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fantastic Roadmaps</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#6ba8c4" />
   <link rel="icon" type="image/png" href="/assets/img/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -254,7 +256,7 @@
   <footer class="copyright">
     <p>Some rights reserved</p>
   </footer>
-
+  <script src="app.js"></script>
   <script src="/script.js"></script>
   <script>document.documentElement.className += ' js'</script>
 </body>
